include/phy_engine/dll_api.h

    // Thread-local diagnostic string for the most recent failing API call.
    // Pointer remains valid until the next API call on the same thread.
    char const* phy_engine_last_error(void);
    void phy_engine_clear_error(void);
    void phy_engine_string_free(char* s);
    // Create a circuit from element codes + wire connections.
    // - `elements`: array of element codes, length `ele_size`; code 0 is treated as "ground placeholder" by the wiring algorithm.
    // - `wires`: array of int quads (ele1,pin1,ele2,pin2); `wires_size` is the number of ints (must be multiple of 4).
    // - `properties`: positional property stream consumed by element constructors.
    // - `vec_pos/chunk_pos/comp_size`: outputs for locating the created models in the netlist (component order is "non-ground elements in ascending element
    // index").
    void* create_circuit(int* elements,
                         size_t ele_size,
                         int* wires,
                         size_t wires_size,
                         double* properties,
                         size_t** vec_pos,
                         size_t** chunk_pos,
                         size_t* comp_size);
    // Like `create_circuit`, but supports creating Verilog modules from source text.
    // - `texts/text_sizes`: string table.
    // - `element_src_index/element_top_index`: per-element indices into `texts` for Verilog source + top name (used when element code is
    // `PHY_ENGINE_E_VERILOG_MODULE`).
    void* create_circuit_ex(int* elements,
                            size_t ele_size,
                            int* wires,
                            size_t wires_size,
                            double* properties,
                            char const* const* texts,
                            size_t const* text_sizes,
                            size_t text_count,
                            size_t const* element_src_index,
                            size_t const* element_top_index,
                            size_t** vec_pos,
                            size_t** chunk_pos,
                            size_t* comp_size);
    void destroy_circuit(void* circuit_ptr, size_t* vec_pos, size_t* chunk_pos);
    // Simulation control
    int circuit_set_analyze_type(void* circuit_ptr, uint32_t analyze_type_value);
    int circuit_set_tr(void* circuit_ptr, double t_step, double t_stop);
    int circuit_set_ac_omega(void* circuit_ptr, double omega);
    int circuit_set_temperature(void* circuit_ptr, double temp_c);
    int circuit_set_tnom(void* circuit_ptr, double tnom_c);
    int circuit_set_model_double_by_name(void* circuit_ptr, size_t vec_pos, size_t chunk_pos, char const* name, size_t name_size, double value);
    int circuit_analyze(void* circuit_ptr);
    int circuit_digital_clk(void* circuit_ptr);
    // Query prefix-sum layouts used by `circuit_sample()` / `circuit_sample_u8()`.
    // - `voltage_ord/current_ord/digital_ord` must each have length `comp_size + 1`.
    // - `voltage_ord[i+1]-voltage_ord[i]` is the pin count of component i.
    // - `current_ord[i+1]-current_ord[i]` is the branch count of component i.
    int circuit_sample_layout(void* circuit_ptr,
                              size_t* vec_pos,
                              size_t* chunk_pos,
                              size_t comp_size,
                              size_t* voltage_ord,
                              size_t* current_ord,
                              size_t* digital_ord);
    // Like `circuit_sample`, but writes digital pin states as bytes (0/1).
    // This is friendlier for FFI/wasm bindings and avoids `std::vector<bool>` issues in C++ callers.
    int circuit_sample_u8(void* circuit_ptr,
                          size_t* vec_pos,
                          size_t* chunk_pos,
                          size_t comp_size,
                          double* voltage,
                          size_t* voltage_ord,
                          double* current,
                          size_t* current_ord,
                          uint8_t* digital,
                          size_t* digital_ord);
    // Like `circuit_sample_u8`, but preserves 4-state digital values:
    // 0=L, 1=H, 2=X, 3=Z. Non-pure-digital/hybrid pins currently report X.
    int circuit_sample_digital_state_u8(void* circuit_ptr,
                                        size_t* vec_pos,
                                        size_t* chunk_pos,
                                        size_t comp_size,
                                        double* voltage,
                                        size_t* voltage_ord,
                                        double* current,
                                        size_t* current_ord,
                                        uint8_t* digital,
                                        size_t* digital_ord);
    // Set a model's digital attribute (commonly used for `PHY_ENGINE_E_DIGITAL_INPUT` at attribute_index=0).
    int circuit_set_model_digital(void* circuit_ptr, size_t vec_pos, size_t chunk_pos, size_t attribute_index, uint8_t state);
    // Global defaults used by `PHY_ENGINE_E_VERILOG_NETLIST` inside `create_circuit_ex()`.
    void verilog_synth_set_opt_level(uint8_t level);
    uint8_t verilog_synth_get_opt_level(void);
    void verilog_synth_set_assume_binary_inputs(bool value);
    bool verilog_synth_get_assume_binary_inputs(void);
    void verilog_synth_set_allow_inout(bool value);
    bool verilog_synth_get_allow_inout(void);
    void verilog_synth_set_allow_multi_driver(bool value);
    bool verilog_synth_get_allow_multi_driver(void);
    void verilog_synth_set_optimize_wires(bool value);
    bool verilog_synth_get_optimize_wires(void);
    void verilog_synth_set_optimize_mul2(bool value);
    bool verilog_synth_get_optimize_mul2(void);
    void verilog_synth_set_optimize_adders(bool value);
    bool verilog_synth_get_optimize_adders(void);
    void verilog_synth_set_loop_unroll_limit(size_t n);
    size_t verilog_synth_get_loop_unroll_limit(void);
    // Verilog runtime: compile/elaborate one top module and simulate it directly.
    // - `include_dirs/include_dir_sizes`: optional include search roots used by `` `include ``.
    // - `top`: optional top module name; empty means: prefer "top", otherwise first compiled module.
    // - On failure returns null and updates `phy_engine_last_error()`.
    void* verilog_runtime_create(char const* src,
                                 size_t src_size,
                                 char const* top,
                                 size_t top_size,
                                 char const* const* include_dirs,
                                 size_t const* include_dir_sizes,
                                 size_t include_dir_count);
    void verilog_runtime_destroy(void* runtime_ptr);
    // Simulation control.
    uint64_t verilog_runtime_get_tick(void* runtime_ptr);
    int verilog_runtime_reset(void* runtime_ptr);
    int verilog_runtime_step(void* runtime_ptr, uint64_t tick, uint8_t process_sequential);
    int verilog_runtime_tick(void* runtime_ptr);  // increments internal tick then simulates with sequential logic enabled
    // Design/runtime introspection.
    size_t verilog_runtime_module_count(void* runtime_ptr);
    size_t verilog_runtime_port_count(void* runtime_ptr);
    size_t verilog_runtime_signal_count(void* runtime_ptr);
    size_t verilog_runtime_preprocessed_size(void* runtime_ptr);
    int verilog_runtime_copy_preprocessed(void* runtime_ptr, char* out, size_t out_size);
    size_t verilog_runtime_top_module_name_size(void* runtime_ptr);
    int verilog_runtime_copy_top_module_name(void* runtime_ptr, char* out, size_t out_size);
    size_t verilog_runtime_module_name_size(void* runtime_ptr, size_t module_index);
    int verilog_runtime_copy_module_name(void* runtime_ptr, size_t module_index, char* out, size_t out_size);
    size_t verilog_runtime_port_name_size(void* runtime_ptr, size_t port_index);
    int verilog_runtime_copy_port_name(void* runtime_ptr, size_t port_index, char* out, size_t out_size);
    uint8_t verilog_runtime_port_dir(void* runtime_ptr, size_t port_index);
    uint8_t verilog_runtime_get_port_value(void* runtime_ptr, size_t port_index);
    int verilog_runtime_set_port_value(void* runtime_ptr, size_t port_index, uint8_t state);
    size_t verilog_runtime_signal_name_size(void* runtime_ptr, size_t signal_index);
    int verilog_runtime_copy_signal_name(void* runtime_ptr, size_t signal_index, char* out, size_t out_size);
    uint8_t verilog_runtime_get_signal_value(void* runtime_ptr, size_t signal_index);
    int verilog_runtime_set_signal_value(void* runtime_ptr, size_t signal_index, uint8_t state);